--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,7 +26,7 @@
             <li><a href="/premios">PREMIOS</a></li>
             <li><a href="/canjes">CANJES</a></li>
             <li><a href="/profile">PERFIL</a></li>
-            <li><a href="/faqs">FAQS</a></li>
+            <li><a href="/faqs">CONSULTAS</a></li>
           </div>
           <div style="display: flex; justify-content:center">
             <img src="images/lupulo.png" alt="">
@@ -46,7 +46,7 @@
             <li><a href="/premios">PREMIOS</a></li>
             <li><a href="/canjes">CANJES</a></li>
             <li><a href="/profile">PERFIL</a></li>
-            <li><a href="/faqs">FAQS</a></li>
+            <li><a href="/faqs">CONSULTAS</a></li>
         </ul>
       </div>
       <div class="profile-wrapper">
