--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,5 +1,8 @@
 <div class="profile-info-wrapper">
   <div class="info-row">
+    <div class="profile-image-wrapper">
+      <img src="/images/circulo_generico.png" alt="" srcset="">
+    </div>
     <div class="personal-info-text">
       <h3>{{user.name}} {{user.lastName}}</h3>
       <h4>{{user.dni}}</h4>
