--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -699,6 +699,12 @@ header #menu-mobile-wrapper {
   justify-content: space-between;
   flex-direction: column;
   width: 30%;
+  padding: 5% 0;
+}
+
+.profile-image-wrapper img {
+  width: auto;
+  height: 60px;
 }
 
 .info-container {
@@ -1322,8 +1328,8 @@ header #menu-mobile-wrapper {
 }
 
 .profile-info-wrapper .info-row img {
-  height: 130px;
-  margin-right: 100px;
+  height: 100px;
+  margin-right: 50px;
 }
 
 .profile-info-wrapper .info-row h3 {
@@ -1514,12 +1520,12 @@ header #menu-mobile-wrapper {
   width: 100%;
   padding: 10px 10%;
   text-align: center;
-  background-color: #fff;
+  background-color: transparent;
   color: #000;
 }
 
 .legal-wrapper span {
-  color: #000;
+  color: #fff;
   font-weight: bold;
   font-family: "AmsiPro-Bold", sans-serif;
   font-size: 10px;
