--- a/views/faq.hbs
+++ b/views/faq.hbs
@@ -4,7 +4,43 @@
   </div>
   <div class="faqs-wrapper">
     <div class="faqs-text">
-
+      <div class="faq-question-wrapper">
+        <p class="faq-question">1. ¿Cómo hago para participar?</p>
+        <div class="faq-answer">
+          <ul>
+            <li>Comprar un pack de productos Patagonia en cualquiera de sus presentaciones adheridas a la promo.</li>
+            <li>Buscar el código oculto que aparece en el pack.</li>
+            <li>Ingresar a la web www.viajaconpatagonia.com.py</li>
+            <li>Ingresar el código oculto para empezar a acumular kilómetros que te permitirán canjear por premios de la marca, o si sos una de las 12 primeras personas en acumular 2.640 kilómetros, te ganas un viaje a Bariloche con un acompañante para conocer la Microcervecería de Patagonia.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="faq-question-wrapper">
+        <p class="faq-question">2. ¿Cuánto vale cada pack?</p>
+        <div class="faq-answer">
+          <ul>
+            <li>Chopp de 300ml = 15 kms</li>
+            <li>Pack de 2 unidades de 710ml = 20 kms</li>
+            <li>Pack de 6 unidades de 355ml = 30 kms</li>
+            <li>Pack de 4 unidades de 710ml = 40 kms</li>
+            <li>Pack de 6 unidades de 473ml = 50 kms</li>
+            <li>Pack de 6 unidades de 710ml = 60 kms</li>
+          </ul>
+        </div>
+      </div>
+      <div class="faq-question-wrapper">
+        <p class="faq-question">3. ¿Qué hago si no me acepta un código que intento cargar?</p>
+        <div class="faq-answer">
+          En esta misma página encontrarás la opción de enviarnos un mensaje, indicándonos el inconveniente y tus datos (nombre, dirección de correo, celular) y nos pondremos en contacto para solucionarlo a la brevedad.
+        </div>
+      </div>
+      <div class="faq-question-wrapper">
+        <p class="faq-question">4. ¿Dónde puedo canjear mis premios?</p>
+        <div class="faq-answer">
+          Tenemos habilitados 2 puntos de canje en Asunción (me faltan los datos) a los cuales podes acercarte con tu voucher electrónico (no es necesario imprimirlo, podés mostrarlo desde la pantalla de tu celular). En algunas ocasiones tendremos habilitados algunos puntos de canje adicionales, para saber más ingreso a nuestras sociales, Facebook e Instagram. Si sos del interior del país, (aquí necesito la info para saber como esa gente va a
+poder canjear sus premios).
+        </div>
+      </div>
     </div>
     <div class="faqs-form">
       <p>¡Envianos tus conusltas!</p>
