--- a/views/faq.hbs
+++ b/views/faq.hbs
@@ -29,21 +29,54 @@
         </div>
       </div>
       <div class="faq-question-wrapper">
+        <p class="faq-question">3. ¿Dónde puedo conseguir los packs/productos que participan??</p>
+        <div class="faq-answer">
+          Podes encontrarlos en supermercados, bodegas, estaciones de servicio. También en bares o restaurantes que se comunicará previamente en nuestras redes sociales.
+        </div>
+      </div>
+      <div class="faq-question-wrapper">
+        <p class="faq-question">4. ¿Cuántos kilómetros vale cada premio?</p>
+        <div class="faq-answer">
+          <ul>
+            <li>Un viaje a Bariloche: 2640kms</li>
+            <li>Mochila: 200kms</li>
+            <li>Buzo: 150kms</li>
+            <li>Gorro: 100kms</li>
+            <li>Growler: 80kms</li>
+            <li>Remera: 80kms</li>
+            <li>Vaso Nonic: 60kms</li>
+            <li>Vaso Riegse: 60kms</li>
+            <li>Vale de Consumición: 60kms</li>
+          </ul>
+        </div>
+      </div>
+      <div class="faq-question-wrapper">
+        <p class="faq-question">5. ¿Dónde puedo canjear mis premios?</p>
+        <div class="faq-answer">
+          Tenemos habilitados 2 puntos de canje en Asunción (me faltan los datos) a los cuales podes acercarte con tu voucher electrónico (no es necesario imprimirlo, podés mostrarlo desde la pantalla de tu celular). En algunas ocasiones tendremos habilitados algunos puntos de canje adicionales, para saber más ingreso a nuestras sociales, Facebook e Instagram. Si sos del interior del país, (aquí necesito la info para saber como esa gente va a poder canjear sus premios).
+        </div>
+      </div>
+      <div class="faq-question-wrapper">
+        <p class="faq-question">6. ¿Hasta cuándo puedo participar?</p>
+        <div class="faq-answer">
+          Hasta el 31 de Octubre de 2018.
+        </div>
+      </div>
+      <div class="faq-question-wrapper">
+        <p class="faq-question">7. ¿Pueden participar menores de edad?</p>
+        <div class="faq-answer">
+          No, los premios pueden ser canjeados por personas a partir de 20 años.
+        </div>
+      </div>
+      <div class="faq-question-wrapper">
         <p class="faq-question">3. ¿Qué hago si no me acepta un código que intento cargar?</p>
         <div class="faq-answer">
           En esta misma página encontrarás la opción de enviarnos un mensaje, indicándonos el inconveniente y tus datos (nombre, dirección de correo, celular) y nos pondremos en contacto para solucionarlo a la brevedad.
         </div>
       </div>
-      <div class="faq-question-wrapper">
-        <p class="faq-question">4. ¿Dónde puedo canjear mis premios?</p>
-        <div class="faq-answer">
-          Tenemos habilitados 2 puntos de canje en Asunción (me faltan los datos) a los cuales podes acercarte con tu voucher electrónico (no es necesario imprimirlo, podés mostrarlo desde la pantalla de tu celular). En algunas ocasiones tendremos habilitados algunos puntos de canje adicionales, para saber más ingreso a nuestras sociales, Facebook e Instagram. Si sos del interior del país, (aquí necesito la info para saber como esa gente va a
-poder canjear sus premios).
-        </div>
-      </div>
     </div>
     <div class="faqs-form">
-      <p>¡Envianos tus conusltas!</p>
+      <p>¡Envianos tus consultas!</p>
       <form>
         <div>
           <label for="">Email</label>
