--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -539,25 +539,37 @@ header #menu-mobile-wrapper {
   padding: 10px 17%; }
 
 #map-container {
-  width: 340px;
-  height: 363px;
-  margin-top: 30px;
-  position: relative;
-  text-align: center; }
+  width: 513px;
+  height: 389px;
+  position: absolute;
+  text-align: center;
+  top: 145px;
+  left: 93px;
+  margin-top: 20px; }
 
 #map-container svg {
   width: 100%;
   height: 100%; }
 
-#map-container p {
+.map-image-wrapper {
+  background-image: url(../images/map.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: absolute;
+  width: 393px;
+  height: 525px;
+  margin-top: 50px; }
+
+.kilometers-left {
   color: #fff;
   font-size: 24px;
-  position: absolute;
-  top: 30%;
-  left: 45%;
-  font-family: "AmsiPro-Light", sans-serif; }
+  font-family: "AmsiPro-Light", sans-serif;
+  display: block;
+  text-align: center;
+  margin-bottom: 50px; }
 
-#map-container p span {
+.kilometers-left span {
   font-family: "AmsiPro-Bold", sans-serif; }
 
 .home-wrapper-info .main-title {
@@ -582,7 +594,9 @@ header #menu-mobile-wrapper {
   position: relative;
   height: 100%;
   justify-content: center;
-  padding-top: 30px; }
+  padding-top: 0px;
+  flex-wrap: wrap;
+  height: 500px; }
 
 .map-wrapper img {
   position: absolute; }
