--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -543,8 +543,8 @@ header #menu-mobile-wrapper {
   height: 389px;
   position: absolute;
   text-align: center;
-  top: 145px;
-  left: 93px;
+  top: 29%;
+  left: 16%;
   margin-top: 20px; }
 
 #map-container svg {
@@ -559,7 +559,8 @@ header #menu-mobile-wrapper {
   position: absolute;
   width: 393px;
   height: 525px;
-  margin-top: 50px; }
+  top: -29%;
+  left: 1%; }
 
 .kilometers-left {
   color: #fff;
