--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -640,8 +640,8 @@ header #menu-mobile-wrapper {
   height: 389px;
   position: absolute;
   text-align: center;
-  top: 145px;
-  left: 93px;
+  top: 29%;
+  left: 16%;
   margin-top: 20px;
 }
 
@@ -658,7 +658,8 @@ header #menu-mobile-wrapper {
   position: absolute;
   width: 393px;
   height: 525px;
-  margin-top: 50px;
+  top: -29%;
+  left: 1%;
 }
 
 .kilometers-left {
