--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -634,6 +634,37 @@ header #menu-mobile-wrapper {
   padding: 10px 17%;
 }
 
+.map-label {
+  color: #fff;
+  font-family: "AmsiPro-Bold", sans-serif;
+  font-size: 18px;
+  position: absolute;
+  top: 0;
+}
+
+.map-pin.bariloche {
+  width: 30px;
+  position: absolute;
+  top: 62%;
+  left: -3%;
+}
+
+.map-pin.asuncion {
+  width: 30px;
+  position: absolute;
+  top: -11%;
+  left: 38%;
+}
+
+.map-label.asuncion {
+  left: 38%;
+  top: 3%;
+}
+
+.map-label.bariloche {
+  top: 74%;
+  left: 0%;
+}
 
 #map-container {
   width: 513px;
@@ -648,6 +679,8 @@ header #menu-mobile-wrapper {
 #map-container svg {
   width: 100%;
   height: 100%;
+  position: relative;
+  z-index: 500;
 }
 
 .map-image-wrapper {
@@ -692,6 +725,7 @@ header #menu-mobile-wrapper {
 .home-info {
   display: flex;
   width: 100%;
+  overflow-x: hidden;
 }
 
 .map-wrapper {
