--- a/views/premios.hbs
+++ b/views/premios.hbs
@@ -32,7 +32,7 @@
     </div>
     </div>
     <div class="viaje-info-wrapper">
-    <p>Que incluye el viaje?</p>
+    <p style="text-align: center;">Que incluye el viaje?</p>
     <ul>
       <li>Pasaje en avión ida y vuelta a Bariloche</li>
       <li>Estadía en un Hotel en Bariloche durante 3 noches</li>
@@ -40,6 +40,7 @@
       <li>Entrada a la Microcerveceria Patagonia</li>
       <li>Merchandising de la marca</li>
     </ul>
+    <p style="font-weight: 200; font-size: 10px; text-align: left; margin-top: 10px;">*El viaje será válido para 2 (dos) personas.</p>
     </div>
     
     
