--- a/views/bases.hbs
+++ b/views/bases.hbs
@@ -19,7 +19,7 @@
 
     <p class="bases-title">1.1. ALCANCE Y DURACION </p>
     <p class="bases-description">
-      1.1	Podrán participar en la PROMOCIÓN únicamente las personas físicas, de cualquier nacionalidad, que posean su documento de identidad vigente, con veinte (20) años de edad cumplidos o más (en adelante los “PARTICIPANTES”) que cumplan con la mecánica de participación prevista para esta PROMOCION los cuales podrán sumar Kilómetros en estas bases y condiciones (en adelante las “BASES”), adquiriendo códigos ocultos, a través de para canjearlos por cualquiera de los premios afectados a la PROMOCION.-   
+      1.1 Podrán participar en la PROMOCIÓN únicamente las personas físicas, de cualquier nacionalidad, que posean su documento de identidad vigente, con veinte (20) años de edad cumplidos o más (en adelante los “PARTICIPANTES”) que cumplan con la mecánica de participación prevista para esta PROMOCION los cuales podrán sumar Kilómetros en estas bases y condiciones (en adelante las “BASES”), adquiriendo códigos ocultos, a través de para canjearlos por cualquiera de los premios afectados a la PROMOCION.-      
     </p>
     <p class="bases-description">
       1.2	Los LOCALES ADHERIDOS a esta PROMOCION serán aquellos de las principales cadenas de Supermercados, Bodegas, Restaurantes y Bares que serán individualizados con materiales publicitarios de la PROMOCION, y que se encontrarán en las ciudades de Asunción, Gran Asunción, Encarnación y Ciudad del Este, no siendo esta lista taxativa, pudiendo haber LOCALES ADHERIDOS en otras ciudades de la República del Paraguay. La lista completa de los LOCALES ADHERIDOS figurará en la página web www.viajaconpatagonia.com.py.-
@@ -30,7 +30,7 @@
 
     <p class="bases-title">2.	PREMIOS AFECTADOS A LA PROMOCION </p>
     <p class="bases-description">
-      2.1. Los premios afectados a esta PROMOCIÓN (en adelante los “PREMIOS”), y que podrán ser ganados por los PARTICIPANTES a través de la mecánica señalada en el apartado 3 siguiente, son: 
+      2.1	Los premios afectados a esta PROMOCIÓN (en adelante los “PREMIOS”), y que podrán ser ganados por los PARTICIPANTES a través de la mecánica señalada en el apartado 3 siguiente, son: 
 <br><br>
 a)	Diez (10) viajes a la Micro Cervecería de Patagonia, situada en Bariloche, Argentina, para dos personas. Cada uno de estos PREMIOS comprenderá un paquete (para dos personas; GANADOR y acompañante) que incluye pasaje en vuelo comercial ida y vuelta Asunción-Bariloche, con sus respectivas conexiones, en la compañía aérea a ser designadas por el ORGANIZADOR, tasa de embarque y tarjetas de asistencia al viajero; estadía por tres (3) noches en un Hotel a ser designado por el ORGANIZADOR, con habitaciones tipo estándar; traslados en el sitio; entrada y recorrido con experiencias en la Micro Cervecería de Patagonia, situada en Bariloche, Argentina. Diez (10) PARTICIPANTES distintos ganarán este PREMIO, entendiéndose que cada uno será merecedor de un (1) paquete, y podrá utilizar el mismo junto con un acompañante. El PREMIO no incluye entradas a otros sitios o locales turísticos ni traslado a los mismos, sin perjuicio de lo cual el ORGANIZADOR podrá, a su arbitrio, ofrecer a los PARTICIPANTES GANADORES entradas a otros sitios o locales turísticos, de acuerdo a disponibilidad. El PARTICIPANTE GANADOR de este PREMIO deberá elegir un (1) acompañante, quien deberá cumplir con los mismos requisitos exigidos en estas BASES para los PARTICIPANTES y quedará sujeto a las mismas causales de exclusión. GANADOR y acompañante harán uso del PREMIO en la misma fecha, la cual será definida por el ORGANIZADOR, quien manifiesta desde ya que los viajes y el paquete que comprenden el PREMIO de esta PROMOCION serán únicamente entre los meses de julio y agosto del 2019. Por lo demás, el ORGANIZADOR y el PARTICIPANTE GANADOR de este PREMIO coordinarán todos los detalles para hacer uso del mismo de conformidad a lo establecido en los puntos 3.3. inc. b) y 3.4 de estas BASES.-
 <br>
@@ -43,12 +43,13 @@ b)	Merchandising de la marca Patagonia
 <br>v.	2000 Vasos
 <br>vi.	100 Growlers cargados más una recarga de 1,9 litros de Cerveza Patagonia
 
+
     </p>
     <p class="bases-description">
       2.2	Los PARTICIPANTES podrán canjear los PREMIOS en la forma señalada en el apartado 3.3.
     </p>
     <p class="bases-description">
-      2.3	Los PARTICIPANTES aceptan y reconocen desde ya que el derecho a canjear los PREMIOS es personalísimo, y que los PREMIOS son intransferibles y no pueden ser reemplazados por dinero, otro premio u otro valor. 
+     2.3	Los PARTICIPANTES aceptan y reconocen desde ya que el derecho a canjear los PREMIOS es personalísimo, y que los PREMIOS son intransferibles y no pueden ser reemplazados por dinero, otro premio u otro valor. 
     </p>
 
 <p class="bases-title">
@@ -57,15 +58,15 @@ b)	Merchandising de la marca Patagonia
 </p>
     <p class="bases-description">
       3.1	Los PARTICIPANTES deberán acumular Kilómetros (puntos) para canjearlos por los PREMIOS. Los PARTICIPANTES conseguirán los Kilómetros de una de las siguientes maneras:
-<br><br>a)	Comprando en cualquier LOCAL ADHERIDO un pack de productos de la marca Patagonia que se encuentre adherido a la PROMOCION, encontrarán en el mismo un código oculto, el cual, a su vez, tendrá cierta cantidad de Kilómetros, de acuerdo al siguiente detalle:
+<br><br> a)	Comprando en cualquier LOCAL ADHERIDO un pack de productos de la marca Patagonia que se encuentre adherido a la PROMOCION, encontrarán en el mismo un código oculto, el cual, a su vez, tendrá cierta cantidad de Kilómetros, de acuerdo al siguiente detalle:
 <br>•	Pack de cuatro (4) Botellas de 355 cc = Código oculto con 25 Kilómetros.
 <br>•	Pack de cuatro (4) Botellas de 730cc = Código oculto con 30 Kilómetros.
 <br>•	Pack de seis (6) latas de 473 cc = Código oculto con 35 Kilómetros.
 <br>•	Pack de seis (6) latas 24.7 de 473 cc = Código oculto con 40 Kilómetros.
 <br><br>b)	Comprando cualquiera de las variedades de la cerveza Patagonia en su versión chopp expedidas en manijas al efecto, en el Refugio Patagonia situado en Cruz del Chaco y Souza, Asunción, y en cualquier otro LOCAL ADHERIDO a la PROMOCION (que sea del rubro Bar o Restaurante), lo que le otorgará derecho a obtener códigos ocultos, que a su vez tendrán cierta cantidad de Kilómetros, de acuerdo al siguiente detalle:
 <br>•	Vaso de Chopp de Patagonia de 300 cc o 500 cc = 1 código oculto con 10 Kilómetros.
-<br>•	Vaso de Chopp de Patagonia en Refugios propios de la marca = 1 código oculto con 15 Kilómetros.
 <br>•	1 Promoción de tres (3) botellas de 730 cc = 1 código oculto con 35 Kilómetros.
+
 
 
     </p>
@@ -73,7 +74,7 @@ b)	Merchandising de la marca Patagonia
       3.2	Los PARTICIPANTES deberán acceder a la página web www.viajaconpatagonia.com.py, crearse un perfil de usuario, y cargar los códigos ocultos que hubieren conseguido de alguna de las formas señaladas en los incisos a) y b) del apartado 3.1 que antecede. Cada código oculto cargará al perfil del PARTICIPANTE los kilómetros que le correspondan, de acuerdo al detalle señalado en el apartado anterior. Los kilómetros serán acumulables durante toda la vigencia de la PROMOCION, y los PARTICIPANTES podrán obtener códigos ocultos ilimitadamente durante dicho plazo.
     </p>
     <p class="bases-description">
-      3.3	En cualquier momento durante el periodo de vigencia de la PROMOCION, los PARTICIPANTES podrán canjear sus kilómetros por los premios correspondientes, según la tabla de equivalencia kilómetros/premios que estará subida a la página web señalada anteriormente. Una vez canjeados kilómetros por premios determinados, estos kilómetros serán consumidos; es decir, se restarán los kilómetros utilizados por el PARTICIPANTE de los kilómetros que tenga acumulados. El proceso de canje de los PREMIOS será el siguiente, de acuerdo al tipo de PREMIO:
+     3.3	En cualquier momento durante el periodo de vigencia de la PROMOCION, los PARTICIPANTES podrán canjear sus kilómetros por los premios correspondientes, según la tabla de equivalencia kilómetros/premios que estará subida a la página web señalada anteriormente. Una vez canjeados kilómetros por premios determinados, estos kilómetros serán consumidos; es decir, se restarán los kilómetros utilizados por el PARTICIPANTE de los kilómetros que tenga acumulados. El proceso de canje de los PREMIOS será el siguiente, de acuerdo al tipo de PREMIO:
 
 <br>a)	Para canjear los PREMIOS del tipo Merchandising (inciso b, apartado 2.1.), los PARTICIPANTES deberán acercarse a los Centros de Canjes, los cuales estarán detallados en la página web y serán individualizados con material publicitario de la PROMOCION. En el Centro de Canje, el funcionario encargado tendrá acceso al sistema que informará la cantidad de Kilómetros acumulados por cada PARTICIPANTE. El PARTICIPANTE comunicará al funcionario cuales de los PREMIOS querrá canjear por sus kilómetros, siempre de acuerdo a la tabla de equivalencia Kilómetros/Premios, y en el lugar se le entregará el mismo, previa deducción de sus Kilómetros en su perfil de usuario en el sistema. Es requisito indispensable para el canje y retiro de estos PREMIOS que el PARTICIPANTE acuda personalmente al Centro de Canje, presente su cédula de identidad  y el código del voucher generado en la web, y firme los documentos que acrediten la recepción conforme del PREMIO canjeado y retirado. Sin esto, el encargado del Centro de Canje no podrá corroborar los Kilómetros acumulados ni realizar el canje correspondiente.
  
@@ -82,14 +83,15 @@ b)	Merchandising de la marca Patagonia
 
     </p>
     <p class="bases-description">
-    3.4	Será responsabilidad exclusiva del PARTICIPANTE ganador contar con la documentación personal que le sea requerida para hacer uso del PREMIO consistente en el Viaje a la Micro Cervecería, y cumplir con las exigencias migratorias y sanitarias necesarias para salir de la República del Paraguay e ingresar y permanecer en la República Argentina, por lo que reconoce expresamente que nada podrá reclamar al ORGANIZADOR si no puede hacer uso del PREMIO por no cumplir con estos requisitos. Corre la misma responsabilidad con relación a la documentación de su acompañante. Todos los gastos en los que pueda incurrir el PARTICIPANTE GANADOR y su acompañante a estos efectos serán a su cuenta y cargo. 
+    
+3.4	Será responsabilidad exclusiva del PARTICIPANTE ganador contar con la documentación personal que le sea requerida para hacer uso del PREMIO consistente en el Viaje a la Micro Cervecería, y cumplir con las exigencias migratorias y sanitarias necesarias para salir de la República del Paraguay e ingresar y permanecer en la República Argentina, por lo que reconoce expresamente que nada podrá reclamar al ORGANIZADOR si no puede hacer uso del PREMIO por no cumplir con estos requisitos. Corre la misma responsabilidad con relación a la documentación de su acompañante. Todos los gastos en los que pueda incurrir el PARTICIPANTE GANADOR y su acompañante a estos efectos serán a su cuenta y cargo. 
 </p>
   <p class="bases-title">
 
     4. ANUNCIOS 
   </p>
     <p class="bases-description">
-      El nombre de los PARTICIPANTES que resulten ganadores de cualquiera de los PREMIOS, especialmente el consistente en el Viaje a la Micro Cervecería, podrá ser dado a conocer por el ORGANIZADOR a través de los perfiles de la marca PATAGONIA en todas las redes sociales, en sus páginas web y en cualquier otro medio de comunicación, por el tiempo que lo considere necesario. Así mismo, la aceptación de las presentes BASES implica la cesión por parte de los PARTICIPANTES GANADORES a favor del ORGANIZADOR y/o sus filiales, del derecho a utilizar su imagen en ocasión al uso del PREMIO consistente en el Viaje a la Micro Cervecería, difundiéndola en las redes sociales de la marca PATAGONIA, en sus páginas web y en cualquier otro medio de comunicación que considere necesario, por un tiempo de hasta tres (3) años contados a partir del uso del PREMIO, sin costo alguno
+     El nombre de los PARTICIPANTES que resulten ganadores de cualquiera de los PREMIOS, especialmente el consistente en el Viaje a la Micro Cervecería, podrá ser dado a conocer por el ORGANIZADOR a través de los perfiles de la marca PATAGONIA en todas las redes sociales, en sus páginas web y en cualquier otro medio de comunicación, por el tiempo que lo considere necesario. Así mismo, la aceptación de las presentes BASES implica la cesión por parte de los PARTICIPANTES GANADORES a favor del ORGANIZADOR y/o sus filiales, del derecho a utilizar su imagen en ocasión al uso del PREMIO consistente en el Viaje a la Micro Cervecería, difundiéndola en las redes sociales de la marca PATAGONIA, en sus páginas web y en cualquier otro medio de comunicación que considere necesario, por un tiempo de hasta tres (3) años contados a partir del uso del PREMIO, sin costo alguno.  
     </p>
 
 <p class="bases-title">
@@ -97,8 +99,8 @@ b)	Merchandising de la marca Patagonia
 
 </p>
     <p class="bases-description">
-      No podrán participar de la PROMOCIÓN ni ser GANADORES de los PREMIOS: 
-<br>a)	Personas menores de veinte (20) años de edad;
+ 5.1	No podrán participar de la PROMOCION: 
+<br><br>a)	Personas menores de veinte (20) años de edad;
 <br>b)	Directivos y empleados del ORGANIZADOR y de cualquier otra sociedad o empresa del grupo ABINBEV; 
 <br>c)	Personas que presten servicios profesionales tercerizados al ORGANIZADOR; 
 <br>d)	Directivos y empleados de empresas o particulares que el ORGANIZADOR contrate para proveer cualquier servicio relacionado a la PROMOCION, y de las empresas o particulares que sean subcontratadas para ello;
@@ -115,7 +117,7 @@ b)	Merchandising de la marca Patagonia
 
 </p>
     <p class="bases-description">
-      Los PARTICIPANTES eximen expresamente al ORGANIZADOR de toda responsabilidad por cualquier daño proveniente de caso fortuito, fuerza mayor y/o hechos de terceros, que no sean directamente imputables al ORGANIZADOR. De igual forma, la responsabilidad del ORGANIZADOR con respecto a los PARTICIPANTES GANADORES de los PREMIOS estará limitada al cumplimiento de lo establecido en estas BASES, quedando expresamente excluida cualquier responsabilidad derivada de eventuales accidentes, daños o perjuicios que ocurran durante el uso de los PREMIOS o mantengan relación con los mismos. Esta exención de responsabilidad se extiende a los daños y perjuicios que puedan sufrir terceros y que ocurran en ocasión del uso de los PREMIOS por parte de los PARTICIPANTES GANADORES.- 
+     Los PARTICIPANTES eximen expresamente al ORGANIZADOR de toda responsabilidad por cualquier daño proveniente de caso fortuito, fuerza mayor y/o hechos de terceros, que no sean directamente imputables al ORGANIZADOR. De igual forma, la responsabilidad del ORGANIZADOR con respecto a los PARTICIPANTES GANADORES de los PREMIOS estará limitada al cumplimiento de lo establecido en estas BASES, quedando expresamente excluida cualquier responsabilidad derivada de eventuales accidentes, daños o perjuicios que ocurran durante el uso de los PREMIOS o mantengan relación con los mismos. Esta exención de responsabilidad se extiende a los daños y perjuicios que puedan sufrir terceros y que ocurran en ocasión del uso de los PREMIOS por parte de los PARTICIPANTES GANADORES.- 
 
     </p>
 
@@ -146,7 +148,7 @@ Los PARTICIPANTES que deseen realizar consultas o solicitar aclaraciones referen
   10. SITUACIONES NO PREVISTAS
 </p>
     <p class="bases-description">
-     Esta PROMOCION se rige por las leyes de la República del Paraguay. Toda situación no prevista para la misma en estas BASES, que pudiera derivar en un conflicto entre el ORGANIZADOR y los PARTICIPANTES, podrá ser resuelta a pedido de las partes por la CONAJZAR, quedando expedita la vía jurisdiccional en caso que los interesados así lo consideren para la mejor defensa de sus derechos, para lo cual se someterán a la competencia de los Tribunales Ordinarios de la Ciudad de Asunción.-
+    Esta PROMOCION se rige por las leyes de la República del Paraguay. Toda situación no prevista para la misma en estas BASES, que pudiera derivar en un conflicto entre el ORGANIZADOR y los PARTICIPANTES, podrá ser resuelta a pedido de las partes por la CONAJZAR, quedando expedita la vía jurisdiccional en caso que los interesados así lo consideren para la mejor defensa de sus derechos, para lo cual se someterán a la competencia de los Tribunales Ordinarios de la Ciudad de Asunción.-
 
     </p>
     <div class="legal-wrapper">
