--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -726,6 +726,7 @@ header #menu-mobile-wrapper {
   display: flex;
   width: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
   height: 500px;
 }
 
