--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -16,9 +16,9 @@
       <img src="/images/logo-color.png" alt="" class="logo-home">
       <h2>Bienvenido al Panel de Control</h2>
       <img src="/images/lupulo.png" alt="" class="lupus-icon login" style="margin-bottom: 10px;">
-      <form action="/auth/panel/login" method="post" onsubmit="return validateLogin()" name="step-three-form">
+      <form action="/auth/login" method="post" onsubmit="return validateLogin()" name="step-three-form">
         <fieldset>
-          <input type="text" name="username" autocomplete="off">
+          <input type="text" name="dni" autocomplete="off">
           <label for="">Username</label>
         </fieldset>
         <fieldset>
