--- a/views/bases.hbs
+++ b/views/bases.hbs
@@ -63,15 +63,16 @@ b)	Merchandising de la marca Patagonia
 <br>•	Pack de cuatro (4) Botellas de 730cc = Código oculto con 30 Kilómetros.
 <br>•	Pack de seis (6) latas de 473 cc = Código oculto con 35 Kilómetros.
 <br>•	Pack de seis (6) latas 24.7 de 473 cc = Código oculto con 40 Kilómetros.
-<br><br>b)	Comprando cualquiera de las variedades de la cerveza Patagonia en su versión chopp expedidas en manijas al efecto, en el Refugio Patagonia situado en Cruz del Chaco y Souza, Asunción, y en cualquier otro LOCAL ADHERIDO a la PROMOCION (que sea del rubro Bar o Restaurante), lo que le otorgará derecho a obtener códigos ocultos, que a su vez tendrán cierta cantidad de Kilómetros, de acuerdo al siguiente detalle:
+<br><br>
+b)	Comprando cualquiera de las variedades de la cerveza Patagonia en su versión chopp expedidas en manijas al efecto, en el Refugio Patagonia situado en Cruz del Chaco y Souza, Asunción, y en cualquier otro LOCAL ADHERIDO a la PROMOCION (que sea del rubro Bar o Restaurante), lo que le otorgará derecho a obtener códigos ocultos, que a su vez tendrán cierta cantidad de Kilómetros, de acuerdo al detalle de más abajo, haciendo la salvedad desde ya que cada PARTICIPANTE podrá adquirir hasta 15 códigos ocultos por día bajo esta mecánica:
+
 <br>•	Vaso de Chopp de Patagonia de 300 cc o 500 cc = 1 código oculto con 10 Kilómetros.
 <br>•	1 Promoción de tres (3) botellas de 730 cc = 1 código oculto con 35 Kilómetros.
 
 
-
     </p>
     <p class="bases-description">
-      3.2	Los PARTICIPANTES deberán acceder a la página web www.viajaconpatagonia.com.py, crearse un perfil de usuario, y cargar los códigos ocultos que hubieren conseguido de alguna de las formas señaladas en los incisos a) y b) del apartado 3.1 que antecede. Cada código oculto cargará al perfil del PARTICIPANTE los kilómetros que le correspondan, de acuerdo al detalle señalado en el apartado anterior. Los kilómetros serán acumulables durante toda la vigencia de la PROMOCION, y los PARTICIPANTES podrán obtener códigos ocultos ilimitadamente durante dicho plazo.
+      3.2	Los PARTICIPANTES deberán acceder a la página web www.viajaconpatagonia.com.py, crearse un perfil de usuario, y cargar los códigos ocultos que hubieren conseguido de alguna de las formas señaladas en los incisos a) y b) del apartado 3.1 que antecede. Cada código oculto cargará al perfil del PARTICIPANTE los kilómetros que le correspondan, de acuerdo al detalle señalado en el apartado anterior. Cada PARTICIPANTE podrá cargar kilómetros por un valor de hasta Gs. 500.000 por día. Los kilómetros serán acumulables durante toda la vigencia de la PROMOCION, y los PARTICIPANTES podrán obtener códigos ocultos ilimitadamente durante dicho plazo, pero con la limitación de carga señalada anteriormente.
     </p>
     <p class="bases-description">
      3.3	En cualquier momento durante el periodo de vigencia de la PROMOCION, los PARTICIPANTES podrán canjear sus kilómetros por los premios correspondientes, según la tabla de equivalencia kilómetros/premios que estará subida a la página web señalada anteriormente. Una vez canjeados kilómetros por premios determinados, estos kilómetros serán consumidos; es decir, se restarán los kilómetros utilizados por el PARTICIPANTE de los kilómetros que tenga acumulados. El proceso de canje de los PREMIOS será el siguiente, de acuerdo al tipo de PREMIO:
