--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -618,6 +618,7 @@ header #menu-mobile-wrapper {
   display: flex;
   width: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
   height: 500px; }
 
 .map-wrapper {
@@ -1219,11 +1220,11 @@ header #menu-mobile-wrapper {
   color: rgba(255, 255, 255, 0.6);
   font-family: "AmsiNarw-SemiBold", sans-serif; }
 
-.profile-info-wrapper .logout-button {
+.logout-button {
   display: flex;
   justify-content: center; }
 
-.profile-info-wrapper .logout-button a {
+.logout-button a {
   font-size: .8em;
   width: 152px;
   left: 0;
@@ -1352,6 +1353,48 @@ header #menu-mobile-wrapper {
   background-size: cover;
   width: 100%;
   min-height: 100vh; }
+
+.navigation-wrapper {
+  display: flex;
+  justify-content: center;
+  padding: 30px 0; }
+
+.vouchers-canjeados span {
+  width: 60%; }
+
+.navigation-wrapper a {
+  color: #fff;
+  text-decoration: none;
+  margin-right: 15px;
+  margin-left: 15px;
+  font-weight: 300;
+  text-transform: uppercase;
+  padding: 15px 25px;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  font-weight: 300;
+  font: 0.9em "AmsiPro-Light", sans-serif; }
+
+table.vouchers-table {
+  width: 100%;
+  color: #fff;
+  font: 0.9em "AmsiPro-Light", sans-serif;
+  border-collapse: collapse; }
+
+table.vouchers-table th {
+  font: 0.9em "AmsiPro-Bold", sans-serif;
+  border: 1px solid;
+  padding: 15px 10px;
+  text-align: left; }
+
+table.vouchers-table td {
+  border: 1px solid;
+  padding: 15px 10px; }
+
+.navigation-wrapper a:hover {
+  background-color: #fff;
+  color: #000;
+  font: 0.9em "AmsiPro-Bold", sans-serif; }
 
 .legal-wrapper {
   width: 100%;
